tests/baselines/reference/mergeWithImportedNamespace.errors.txt
tests/cases/compiler/f2.ts(1,9): error TS2440: Import declaration conflicts with local declaration of 'N'.


==== tests/cases/compiler/f1.ts (0 errors) ====
    export namespace N { export var x = 1; }
    
==== tests/cases/compiler/f2.ts (1 errors) ====
    import {N} from "./f1";
            ~
!!! error TS2440: Import declaration conflicts with local declaration of 'N'.
    export namespace N {
        export interface I {x: any}
    }